# senior-design

./: .gitignore  Dive.py  DiveDepth.csv  DiveOrientation.csv  Flip.py  FlipOrientation.csv  Mar24Kp1Ki0_1Kd1seconds30.csv  Mar24Kp4Ki0_4Kd0seconds30.csv  Mar26Kp2Ki0_2Kd0_1seconds60.csv  Mar26Kp2Ki0_2Kd0_1seconds60_2.csv  Mar26Kp4Ki0_4Kd0seconds60.csv  Pressure.py  README.md  Script.py  pressure.csv  test.py  tokens.py
AllCompnents/: AllCompnents.ino
ArduinoMain/: ArduinoMain.ino  BarometerDriver.cpp  BarometerDriver.h  Constants.h  Controller.cpp  Controller.h  DepthController.cpp  DepthController.h  GPSDriver.cpp  GPSDriver.h  IMUDriver.cpp  IMUDriver.h  MS5837Driver.cpp  MS5837Driver.h  MasterComputeBridge.cpp  MasterComputeBridge.h  Msgs.h  OrientationController.cpp  OrientationController.h  PingDriver.cpp  PingDriver.h  RadioDriver.cpp  RadioDriver.h  SerialParser.cpp  SerialParser.h  StateMachine.cpp  StateMachine.h  ThrusterDriver.cpp  ThrusterDriver.h  WaypointController.cpp  WaypointController.h  _GPSDriver.cpp  _GPSDriver.h  _StateMachineTests.h  _depth_unittests.h  _helper_tests.h  _tests.h  timer.h  units.h
Testing:Demos/GPS_HardwareSerial_Parsing/: GPS_HardwareSerial_Parsing.ino
Testing:Demos/LoraButtonDemo/: LoraButtonDemo.ino
Testing:Demos/LoraConstantTransimtter/: LoraConstantTransimtter.ino
Testing:Demos/ThrusterPositionTest/: ThrusterPositionTest.ino
Testing:Demos/pingTest/: pingTest.ino
WaypointLora/: WaypointLora.ino
apr19/: apr19.csv  apr19_2.csv  apr19_3.csv  apr19_4.csv  apr19_flip.csv
documentation/: interview_with_spicer.md
launch/: launch.py
src/frame_transformer/: package.xml  setup.cfg  setup.py
src/frame_transformer/test/: test_frame_transformer.py
src/hardware_bridge/: package.xml  setup.cfg  setup.py
src/hardware_bridge/config/: msg_types.yaml
src/hardware_bridge/hardware_bridge/: .HardwareBridge.py.swp  HBNode.py  HardwareBridge.py  MessageCreator.py  NavigationNode.py  tokens.py
src/logger/: package.xml  setup.py
src/logger/logger/: Logger.py  (+1 more)
src/profiler_msgs/: CMakeLists.txt  package.xml
src/profiler_msgs/action/: DoWaypoint.action  Profile.action  Waypoint.action
src/profiler_msgs/msg/: Gnss.msg  Pwm.msg  Waypoint.msg
src/profiler_msgs/srv/: GetDepth.srv  GetGnss.srv  GetMinionStatus.srv  GetOrientation.srv  SendKill.srv  SendPwm.srv
src/state_machine/: package.xml  setup.py
src/state_machine/state_machine/: Profile.action  State.py  StateMachine.py  StateMachineNode.py  Waypoint.action
src/velocity_commander/: package.xml  setup.cfg  setup.py
(+9 files in other folders)
